tests/tests_p1/pass/prof/28ok.min
program start
	if ? then
		"dead code!\n"!
		return 1
	fi
end
