tests/tests_p1/fail/prof/38wronginit.min
program
	number n := "hello"
start
	n! "\n"!
end
